# Python_web_7

./: pyproject.toml  seeds.py
migrations/: README.md
migrations/versions/: 322063764f08_init.py
