[tool.poetry]
name = "WEB_HOMEWORK_7"
version = "0.1"
description = ""
authors = ["Victor3637 <https://github.com/Victor3637>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
faker = "^19.6.2"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
